syntax = "proto3";

package example.complex;

option go_package ="complexpb";

message ComplexMessage {
  DummyMessage one_dummy = 2;
  repeated DummyMessage multiple_dummy = 3;
}

message DummyMessage {
  int32 id = 1;
  string name = 2;
}