syntax = "proto3";

package example.enumerations;

option go_package="enumpb" ;

message EnumMessage {
  int32 id = 1;
  DayOfTheWeek day_of_the_week = 2;
}

enum DayOfTheWeek {
  UNKNOWN = 0;
  MONDAY = 1;
  TUESDAY = 2;
  WEDNESDAY = 3;
  THURSDAY = 4;
  FRIDAY = 5;
  SATURDAY = 6;
  SUNDAY = 7;
}