syntax ="proto3";

//package example.simple ;

option go_package ="simpledb" ;

message SimpleMessage{
    int32 id=1;
    bool isSimple =2;
    string name =3;
    repeated int32 sampleList=4;
}